--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -58,6 +58,13 @@ h2, p {
     color: var(--branco);
 }
 
+footer {
+    display: flex;
+    background: var(--azul);
+    width: 100%;
+    height: 10vh;
+}
+
 .img-carro {
     display: block;
     margin-top: 10px;
