--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,7 +5,8 @@
 }
 
 html {
-    background: var(--cinza-escuro);
+    background: var(--branco);
+    overflow-x: hidden;
 }
 
 :root {
@@ -55,14 +56,15 @@ menu > ul > li > a:hover {
 h2, p {
     text-align: center;
     font-family: 'Poppins', sans-serif;
-    color: var(--branco);
+    color: var(--preto);
 }
 
 footer {
     display: flex;
-    background: var(--azul);
+    background: var(--cinza-escuro);
     width: 100%;
     height: 10vh;
+    margin-top: 25px;
 }
 
 .img-carro {
@@ -71,7 +73,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
-    width: 80vw;
+    width: 70vw;
     height: 50vh;
     border: transparent 1px;
     background: linear-gradient(150deg, var(--azul), var(--branco));
@@ -148,4 +150,69 @@ footer {
 
 .mobile.active span:nth-child(3) {
     transform: translateX(60px);
+}
+
+/* .title {
+    position: relative;
+    width: 100%;
+    height: 8vh;
+    background: var(--azul);
+} */
+
+.title h1 {
+    color: var(--branco);
+    font-size: 3em;
+    font-weight: 100;
+    letter-spacing: 0.1em;
+    text-shadow: 0 0 10px var(--branco),
+    0 0 10px var(--branco);
+}
+
+.homepage {
+    position: relative;
+    width: 100%;
+    height: 50vh;
+    background: var(--azul);
+    overflow: hidden;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-image: url("../images/home.gif");
+}
+
+/* .topLayer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10vh;
+    background: var(--azul);
+    animation: animatetopLayer 5s linear infinite;
+} */
+
+/* @keyframes animatetopLayer {
+    0%, 2.5% {
+        transform: translateX(0);
+    } 5% {
+        transform: translateX(0);
+    } 45% {
+        transform: translateX(100%);
+    } 47.5%, 50% {
+        transform: translateX(100%);
+    } 50.001%, 52.5% {
+        transform: translateX(-100%);
+    } 55% {
+        transform: translateX(-100%);
+    } 95% {
+        transform: translateX(0%);
+    } 95.5%, 100% {
+        transform: translateX(0%);
+    }
+} */
+
+.listasFooter {
+    text-align: center;
+    list-style-type: none;
+    flex-direction: row;
+    justify-content: center;
+    margin: 25px;
 }
